--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ html {
 }
 
 .section-1-imgs {
+    background-color: #000;
     width: 500px;
     height: 300px;
     display: flex;
@@ -98,7 +99,7 @@ html {
 
 .card:hover {
     transform:  skewX(-2deg);
-    box-shadow: -2rem -2rem 2rem #000;
+    box-shadow: 2rem 2rem 2rem #000;
 }
 
 .card::before {
@@ -149,4 +150,122 @@ html {
     cursor: pointer;
     box-shadow: -0.2rem -0.2rem 0.2rem #000;
 
+}
+
+/* Section-3 */
+
+.section-3 {
+    background-color: #333;
+    padding: 5rem 0;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 10rem;
+}
+
+.gallery-link {
+    position: relative;
+    margin: 4rem 1rem;
+}
+
+.gallery-link::before {
+    content: "";
+    position: absolute;
+    top: 2vw;
+    left: 80%;
+    width: .2rem;
+    height: 0;
+    background-color: blanchedalmond;
+    transition: height .5s;
+
+}
+
+.gallery-link:hover::before {
+    height: 80%;
+}
+
+.gallery-link::after {
+    content: "";
+    position: absolute;
+    top: 30%;
+    left: 2rem;
+    width: 0;
+    height: .2rem;
+    background-color: blanchedalmond;
+    transition: width .5s;
+}
+
+.gallery-link:hover::after {   
+    width: 90%;
+}
+
+.gallery-img {
+    width: 24vw;
+    height: 15vw;
+    object-fit: cover;
+    box-shadow: .3rem .3rem .1rem #000;
+    transition: .5s;
+}
+
+.gallery-link:hover .gallery-img {
+    box-shadow: 1rem 1rem 1rem;
+}
+.gallery-link:hover .hs {
+    box-shadow: 1rem 1rem 1rem #00ff22;
+}
+.gallery-link:hover .bf {
+    box-shadow: 1rem 1rem 1rem #ffd500;
+}
+.gallery-link:hover .so {
+    box-shadow: 1rem 1rem 1rem #ffae00;
+}
+.gallery-link:hover .st {
+    box-shadow: 1rem 1rem 1rem #ff0000;
+}
+.gallery-link:hover .de {
+    box-shadow: 1rem 1rem 1rem #ffffff;
+}
+
+.food-name {
+    position: absolute;
+    top: 3rem;
+    left: 3rem;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    color: blanchedalmond;
+    text-shadow: .3rem .3rem .3rem #000;
+    width: 0;
+    overflow: hidden;
+    transition: wifth .3s;
+
+}
+
+.gallery-link:hover .food-name {
+    width: 100%;
+    transition: width 1.5s;
+}
+
+.food-description {
+    position: absolute;
+    bottom: 3vw;
+    left: 2rem;
+    width: 70%;
+    font-size: 1.5rem;
+    font-weight: 300;
+    letter-spacing: .1rem;
+    color: blanchedalmond;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .3s;
+}
+
+.gallery-link:hover .food-description{
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 1s 1s;
 }
