--- a/style.css
+++ b/style.css
@@ -180,8 +180,8 @@ html {
     width: .2rem;
     height: 0;
     background-color: blanchedalmond;
+    z-index: 10;
     transition: height .5s;
-
 }
 
 .gallery-link:hover::before {
@@ -213,6 +213,8 @@ html {
 
 .gallery-link:hover .gallery-img {
     box-shadow: 1rem 1rem 1rem;
+    opacity: .5;
+    transform: scale(1.1);
 }
 .gallery-link:hover .hs {
     box-shadow: 1rem 1rem 1rem #00ff22;
