--- a/style.css
+++ b/style.css
@@ -271,3 +271,82 @@ html {
     visibility: visible;
     transition: opacity 1s 1s;
 }
+
+/* Section-4 */
+
+.section-4 {
+    width: 100%;
+    height: 30vh;
+    background-color: #222;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding: 3rem 0;
+    position: relative;
+}
+
+.section-4-text {
+    text-shadow: .3rem .3rem .3rem #000;
+}
+
+.section-4-heading {
+    font-size: 4rem;
+    font-weight: 900;
+    color: blanchedalmond;
+    margin: .5rem;
+}
+
+.section-4-p {
+    font-size: 1.5rem;
+    color: #ffebcd;
+}
+
+.signup-form {
+    position: absolute;
+    align-items: center;
+
+}
+
+.signup-input {
+    width: 35rem;
+    height: 5rem;
+    padding: 1rem;
+    border: .2rem solid #ffebcd;
+    background-color: rgba(0, 0, 0, .5);
+    font-size: 1.6rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    color: blanchedalmond;
+}
+
+.signup-btn {
+    position: relative;
+    left: -4.75rem;
+    bottom: .2rem;
+    width: 4rem;
+    height: 4rem;
+    background-color: blanchedalmond;
+    cursor: pointer;
+    border: none;
+}
+
+.signup-btn:hover {
+    border: .1rem solid;
+}
+
+.logo {
+    position: absolute;
+    max-width: 240px;
+    bottom: 3rem;
+   
+}
+
+.copyright {
+    position: absolute;
+    bottom: 3rem;
+    font-size: 1.7rem;
+    font-weight: 200;
+    color: aliceblue;
+    letter-spacing: .1rem;
+    border-top: .1rem solid #ffebcd;
+}
