--- a/style.css
+++ b/style.css
@@ -17,6 +17,81 @@ html {
     font-size: 62.5%;
 }
 
+/* navbar */
+
+.navbar {
+    width: 100%;
+    height: 10rem;
+    background-color: #000;
+    position: fixed;
+    top: -10rem;
+    z-index: 40;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: .2rem .2rem .2rem;
+    transition: top 0.4s;
+}
+
+.navbar.change {
+    top: 0;
+    transition: top .4s .2s;
+}
+
+.nav-link {
+    color: blanchedalmond;
+    margin: .4rem;
+    transition: color .3s, opacity .2s;
+    opacity: 0;
+}
+
+.change .nav-link {
+    opacity: 1;
+}
+
+.change .nav-link:nth-child(1) {
+    transition: opacity 1s .5s, color .3s;
+}
+
+.change .nav-link:nth-child(2) {
+    transition: opacity 2s .6s, color .3s;
+}
+
+.change .nav-link:nth-child(3) {
+    transition: opacity 3s .7s, color .3s;
+}
+
+.change .nav-link:nth-child(4) {
+    transition: opacity 4s .8s, color .3s;
+}
+
+.change .nav-link:nth-child(5) {
+    transition: opacity 5s .9s, color .3s;
+}
+
+.nav-link:hover {
+    color: aliceblue;
+}
+
+.nav-link span {
+    font-size: 2.5rem;
+    font-weight: 900;
+    letter-spacing: .5rem;
+    margin-top: .5rem;
+}
+
+.menu {
+    width: 4rem;
+    height: 4rem;
+    background-color: blanchedalmond;
+    position: fixed;
+    left: 3rem;
+    top: 3rem;
+    border-radius: 5rem;
+    z-index: 42;
+    box-shadow: .1rem .1rem .1rem #000, -.1rem -.1rem .1rem #000;
+    cursor: pointer;
+}
 
 /* Section-1 */
 
@@ -36,6 +111,7 @@ html {
     color: blanchedalmond;
     letter-spacing: .5rem;
     text-shadow: .3rem .3rem .3rem #000;
+    text-align: center;
 
 }
 
