--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ html {
 
 .card {
     width: 30rem;
-    background-color: aquamarine;
+    background-color: rgb(8, 224, 210);
     padding: 4rem;
     display: flex;
     flex-direction: column;
@@ -172,6 +172,10 @@ html {
     /* transform: rotateY(20deg) skewX(-2deg); */
     transform: transform .5s, box-shadow .5s;
 }
+
+/* BBQ rgb(19, 18, 18) */
+/* Dine rgb(123, 0, 0) */
+/* Coctails rgb(8, 224, 210) */
 
 .card:hover {
     transform:  skewX(-2deg);
@@ -426,3 +430,93 @@ html {
     letter-spacing: .1rem;
     border-top: .1rem solid #ffebcd;
 }
+
+
+/* @Media */
+
+@media (max-width: 1400px) {
+    html {
+        font-size: 50%;
+    }
+
+
+     .section-2 {
+         height: auto;
+         padding: 10rem 0 12rem 0;
+     }
+
+     .cards-container {
+         margin-top: 10rem;
+     }
+
+     .gallery-link {
+         width: 40rem;
+         height: 25rem;
+         margin: 5rem;
+     }
+
+     .gallery-img {
+         width: 100%;
+         height: 100%;   
+     }
+}
+
+@media (max-width: 1000px) {
+    .section-heading {
+        font-size: 9rem;
+        margin: 0 5rem;
+    }
+}
+
+@media (max-width: 900px) {
+    .nav-link {
+        margin: 2rem;
+    }
+
+
+     .nav-link span {
+         font-size: 2rem;
+     }
+
+     .cards-container {
+         flex-wrap: wrap;
+     }
+
+     .card {
+         margin: 5rem;
+     }
+}
+
+@media (max-width: 700px) {
+    .section-heading {
+        font-size: 7rem;
+        margin: 0 10rem;
+    }
+
+    .section-4 {
+        height: 40rem;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .section-4-text {
+        margin-bottom: 8rem;
+    }
+}
+
+@media (max-width: 550px) {
+    .nav-link {
+        margin:0 0.7rem ;
+    }
+    
+    .section-1-imgs {
+        width: 400px;
+        height: 240px;
+    }
+
+.section-1-imgs img.change {
+    transform: translate(0, 0) scale(.8);
+}
+}
+
