--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ html {
 
 .section-1-imgs {
     background-color: #000;
-    width: 500px;
+    width: 750px;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -126,7 +126,7 @@ html {
 }
 
 .section-1-imgs img {
-    width: 500px;
+    width: 750px;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -161,7 +161,7 @@ html {
 
 .card {
     width: 30rem;
-    background-color: rgb(8, 224, 210);
+    background-color: #e58004;
     padding: 4rem;
     display: flex;
     flex-direction: column;
@@ -173,9 +173,21 @@ html {
     transform: transform .5s, box-shadow .5s;
 }
 
-/* BBQ rgb(19, 18, 18) */
-/* Dine rgb(123, 0, 0) */
-/* Coctails rgb(8, 224, 210) */
+.bbq {
+    background-color: #352a23;
+}
+
+.dine {
+   background-color: #e4c6b1;
+}
+
+.card-img {
+    height: 350px;
+    object-fit: cover;
+    border: #ffae00 solid;
+}
+
+
 
 .card:hover {
     transform:  skewX(-2deg);
@@ -186,7 +198,7 @@ html {
     content: "";
     height: 100%;
     width: 1rem;
-    background-color: rgb(94, 197, 163);
+    background-color: rgb(47, 47, 47);
     position: absolute;
     top: 0;
     left: -1rem;
@@ -199,7 +211,7 @@ html {
     content: "";
     height: 1rem;
     width: 100%;
-    background-color: rgb(207, 255, 239);
+    background-color: rgb(237, 255, 249);
     position: absolute;
     top: -1rem;
     left: 0;
@@ -466,6 +478,16 @@ html {
         font-size: 9rem;
         margin: 0 5rem;
     }
+
+    .menu {
+    width: 3rem;
+    height: 3rem;
+    background-color: blanchedalmond;
+    position: fixed;
+    left: 1rem;
+    top: 3.5rem;
+    }
+
 }
 
 @media (max-width: 900px) {
@@ -491,6 +513,15 @@ html {
     .section-heading {
         font-size: 7rem;
         margin: 0 10rem;
+    }
+
+     .menu {
+    width: 2rem;
+    height: 2rem;
+    background-color: blanchedalmond;
+    position: fixed;
+    left: 1rem;
+    top: 1rem;
     }
 
     .section-4 {
