--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&display=swap');
-/* font-family: 'Bebas Neue', cursive; */
+
 
 
 * {
@@ -39,7 +38,7 @@ html {
 }
 
 .nav-link {
-    color: blanchedalmond;
+    color: #ffebcd;
     margin: .4rem;
     transition: color .3s, opacity .2s;
     opacity: 0;
@@ -118,7 +117,7 @@ html {
 .section-1-imgs {
     background-color: #000;
     width: 750px;
-    height: 300px;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -127,7 +126,7 @@ html {
 
 .section-1-imgs img {
     width: 750px;
-    height: 300px;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
